# Glassbox

./: .env.example  .gitattributes  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  run.py
cases/case01/: groundtruth.json
cases/case01/evidence/: README.txt  acquisition.manifest
cases/case01/fixtures/: amcache.json  evtx.json  injection_artifacts.json  logfile.json  mft.json  prefetch.json  runkeys.json  shimcache.json  usn.json  vol_cmdline.json  vol_malfind.json  vol_netscan.json  vol_pslist.json  yara.json
docs/: ACCURACY.md  ARCHITECTURE.md  DATASET.md  DEMO_SCRIPT.md  DEVPOST.md  SIFT_SETUP.md
glassbox/: __init__.py  agent.py  claimchain.py  evidence.py  gate.py  injection_corpus.txt  llm.py  mcp_server.py  orchestrator.py  promptarmor.py  report.py  schemas.py  scorer.py  sift_adapters.py  tools.py
sample_run/: README.md  accuracy.json  integrity_certificate.json  ledger.jsonl  report.html
scripts/: free_vtx_for_virtualbox.ps1  import_sift_virtualbox.ps1  setup_sift.sh
tests/: _util.py  test_agent.py  test_claimchain.py  test_end_to_end.py  test_gate.py  test_promptarmor.py  test_sift_adapters.py  test_tools_readonly.py
